--- a/world_of_nabeeda/api/post/models/post.settings.json
+++ b/world_of_nabeeda/api/post/models/post.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "posts",
   "info": {
-    "name": "post"
+    "name": "post",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -34,6 +35,17 @@
     },
     "published": {
       "type": "date"
+    },
+    "category": {
+      "type": "enumeration",
+      "enum": [
+        "lifestyle",
+        "travel",
+        "causes",
+        "career",
+        "education"
+      ],
+      "required": true
     }
   }
 }
