--- a/worldofnabeeda-frontend/package.json
+++ b/worldofnabeeda-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "world-of-nabeeda-next",
+  "name": "worldofnabeeda-frontend",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,11 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "next": "^12.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.43.4"
+    "next": "12.0.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
