Set up blog page routing

--- a/world_of_nabeeda/api/post/models/post.settings.json
+++ b/world_of_nabeeda/api/post/models/post.settings.json
@@ -43,7 +43,8 @@
         "travel",
         "causes",
         "career",
-        "education"
+        "education",
+        "me"
       ],
       "required": true
     }
