--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-material-ui-carousel": "^3.1.1",
     "sass": "^1.43.4"
   },
   "devDependencies": {
