--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.0.4",
     "qs": "^6.10.2",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.1.1",
