--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@mui/material": "^5.2.0",
     "axios": "^0.24.0",
     "markdown-it": "^12.2.0",
-    "next": "12.0.4",
+    "next": "^12.0.7",
     "qs": "^6.10.2",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.1.1",
+    "react-player": "^2.9.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {
