--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.0",
+    "@tanem/react-nprogress": "^4.0.0",
     "axios": "^0.24.0",
     "markdown-it": "^12.2.0",
     "next": "^12.0.7",
@@ -21,7 +22,8 @@
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.1.1",
     "react-player": "^2.9.0",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "zustand": "^3.6.7"
   },
   "devDependencies": {
     "eslint": "7.32.0",
