--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^8.0.0",
     "react-material-ui-carousel": "^3.1.1",
     "react-player": "^2.9.0",
+    "react-share": "^4.4.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {
