--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.0",
     "react-material-ui-carousel": "^3.1.1",
     "react-player": "^2.9.0",
+    "react-share": "^4.4.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {
