--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "qs": "^6.10.2",
         "react": "17.0.2",
         "react-burger-menu": "^3.0.6",
+        "react-cookie-consent": "^7.3.1",
         "react-dom": "17.0.2",
         "react-icons": "^4.3.1",
         "react-markdown": "^8.0.0",
